# functional-programming

./: README.md
.github/workflows/: haskell.yml
haskell/: .gitignore  CHANGELOG.md  LICENSE  README.md  ewhaskell.cabal  makefile
haskell/Basic/: Main.hs
haskell/Basic/DataTypes/: BasicTypes.hs
haskell/Codewars/EightKyu/DividedBy/: DividedBy.hs  README.md
haskell/Codewars/EightKyu/RealFloor/: RealFloor.hs
haskell/Codewars/EightKyu/ReversedString/: ReversedString.hs
haskell/Codewars/EightKyu/ShortLongShort/: ShortLongShort.hs
haskell/Codewars/EightKyu/SimpleMultiplication/: SimpleMultiplication.hs
haskell/Codewars/EightKyu/StringRepeat/: StringRepeat.hs
haskell/Codewars/EightKyu/SumString/: SumString.hs
haskell/Tests/: Spec.hs
haskell/Tests/DataTypes/: BasicTypes.hs
haskell/Tests/Test/: BasicTypes.hs
haskell/basic/: EmptyWork.hs  Main.hs
haskell/basic/DataTypes/: BasicTypes.hs  ObjectTypes.hs
haskell/challenges/solvemefirst/: SolveMeFirst.hs
haskell/challenges/w3resource/: W3Resource.hs
haskell/codewars/8kyu/divided-by/: DividedBy.hs
haskell/codewars/8kyu/real-floor/: README.md  RealFloor.hs
haskell/codewars/8kyu/short-long-short/: ShortLongShort.hs
haskell/codewars/8kyu/string-repeat/: README.md  StringRepeat.hs
haskell/codewars/8kyu/sum-string/: SumString.hs
haskell/codewars/EightKyu/DividedBy/: DividedBy.hs  README.md
haskell/codewars/EightKyu/RealFloor/: RealFloor.hs
haskell/codewars/EightKyu/ReversedString/: README.md  ReversedString.hs
haskell/codewars/EightKyu/ShortLongShort/: README.md  ShortLongShort.hs
haskell/codewars/EightKyu/SimpleMultiplication/: README.md  SimpleMultiplication.hs
haskell/codewars/EightKyu/StringRepeat/: StringRepeat.hs
haskell/codewars/EightKyu/SumString/: README.md  SumString.hs
haskell/tests/: Spec.hs
haskell/tests/Test/: BasicTypes.hs  ChaW3Re.hs  Codewars.hs  ObjectTypes.hs
purescript/: LICENSE  README.md  bower.json  packages.dhall  spago.dhall
purescript/src/: EmptyWork.purs  Main.purs
purescript/src/codewars/eightkyu/: DividedBy.purs  RealFloor.purs
purescript/test/: EightKyu.purs  Main.purs
purescript/test/tests/: DividedBy.purs  EightKyu.purs  Realfloor.purs
