cabal-version:      2.4
name:               ewhaskell
version:            0.1.4.2
synopsis:           Haskell based code
description:        
    Collection of code for learning and solving the katas from [Codewars](https://www.codewars.com/)
    See [README.md](https://github.com/EmptyWork/functional-programming/haskell/#haskell) for more details.
homepage:           https://github.com/EmptyWork/functional-programming/haskell
bug-reports:        https://github.com/EmptyWork/functional-programming/issues
license:            MIT
license-file:       LICENSE
author:             emptywork
maintainer:         22065214+EmptyWork@users.noreply.github.com
copyright:          2021 EmptyWork
extra-source-files: 
    CHANGELOG.md
    README.md

source-repository head
    type:                git
    location:            https://github.com/EmptyWork/functional-programming.git

common common-options
  build-depends:       base ^>= 4.14.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      basic
  exposed-modules:     DataTypes.BasicTypes
                     , DataTypes.ObjectTypes 

test-suite ewhaskell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       Test.BasicTypes
                     , Test.ObjectTypes
  build-depends:       ewhaskell
                     , hspec ^>= 2.7.4
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable DataTypes
  import:              common-options
  hs-source-dirs:      basic
  main-is:             Main.hs
  other-modules:       DataTypes.BasicTypes